adds all new files

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    
+    {% include "auctions/listing_layout.html" with auctions=auctions sub_title="Active Listings"%}
 
-    TODO
 {% endblock %}
