--- a/commerce/auctions/templates/auctions/user_panel.html
+++ b/commerce/auctions/templates/auctions/user_panel.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="sub-title">Hi {{ user.username }}</div>
+{% comment %} <div class="sub-title">Hi {{ user.username }}</div> {% endcomment %}
 
 <div class="user-panel">
     <div class="card mb-3 pb-5">
