--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -29,50 +29,38 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">Auctions</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
+                {% if user.is_authenticated %}
                     <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav">
                         <li class="nav-item active">
-                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{% url 'auctions:user_panel' %}">User Panel</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="{% url 'auctions:create_listing' %}">Create Listing</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="{% url 'auctions:watchlist' %}">Watchlist</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out <strong>{{ user.username }}</strong></a>
                         </li>
                       </ul>
                     </div>
+                {% else %}
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{% url 'auctions:login' %}">Log In</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'auctions:register' %}">Register</a>
+                            </li>
+                        </ul>
+                     </div>
+                {% endif %}
                   </nav>
-                <div class="">
-                </div>
-                <div class="nav-buttons">
-                    {% if user.is_authenticated %}
-                        <button type="button" class="btn btn-primary btn-new-blue">
-                            <a class="nav-link" href="{% url 'auctions:user_panel' %}">User Panel</a>
-                        </button>
-                        <button type="button" class="btn btn-primary btn-new-blue">
-                            <a class="nav-link" href="{% url 'auctions:create_listing' %}">Create Listing</a>
-                        </button>
-                        <button type="button" class="btn btn-primary btn-new-blue">
-                            <a class="nav-link" href="{% url 'auctions:watchlist' %}">Watchlist</a>
-                        </button>
-                        <button type="button" class="btn btn-danger">
-                            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out</a>
-                        </button>
-                    {% else %}
-                        <button type="button" class="btn btn-primary btn-new-blue">
-                            <a class="nav-link" href="{% url 'auctions:login' %}">Log In</a>
-                        </button>
-                        <button type="button" class="btn btn-primary btn-new-blue ">
-                            <a class="nav-link" href="{% url 'auctions:register' %}">Register</a>
-                        </button>
-                    {% endif %}
-                </div>
             </header>
             <div class="l-navbar" id="nav-bar">
                 <nav class="nav">
@@ -190,16 +178,12 @@
                     </div>
                 </nav>
             </div>
-            <div>
-                <div class="main-title">Auctions</div>
-                {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>
-                {% endif %}
-                <hr>
-            </div>
             <div class="height-100 bg-light">
                 {% block body %}
                 {% endblock %}
             </div>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
