--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="{% url 'auctions:watchlist' %}">Watchlist</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out <strong>{{ user.username }}</strong></a>
+                            <a class="nav-link" href="{% url 'auctions:logout' %}">Log Out <strong>{{ user.username }}</strong</a>
                         </li>
                       </ul>
                     </div>
@@ -60,6 +60,13 @@
                         </ul>
                      </div>
                 {% endif %}
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/admin/login/?next=/admin/">Admin</a>
+                        </li>
+                    </ul>
+                </div>
                   </nav>
             </header>
             <div class="l-navbar" id="nav-bar">
@@ -177,6 +184,12 @@
                         </div>
                     </div>
                 </nav>
+            </div>
+            <div>
+                {% if user.is_authenticated %}
+                Signed in as <strong>{{ user.username }}</strong>
+                {% endif %}
+                <hr>
             </div>
             <div class="height-100 bg-light">
                 {% block body %}
