--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block body %}
-<div class="card">
+<div class="card" id="new_post">
+    {% if user.is_authenticated %}
     <div class="card-body my-card">
         Add New Post
             <textarea class="mt-2 form-control" id="add-text" rows="3"></textarea>
@@ -10,7 +11,9 @@
                 <button type="button" id="add-btn" class="btn btn-success">Post</button>
             </div>
     </div>
+    {% endif %}
 </div>
+
+{% include "network/allpost.html" %}
+
 {% endblock %}
-  
-{% block script %} <script src="{% static 'network/new_post.js'%}"></script> {% endblock %}
