--- a/network/templates/network/allpost.html
+++ b/network/templates/network/allpost.html
@@ -1,5 +1,16 @@
 {% load static %}
 
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-end">
+      <li class="page-item previous-btn ">
+        <a class="page-link" href="#" >Previous</a>
+      </li>
+      <li class="page-item next-btn">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+  </nav>
+
 <div id="allposts"></div>
 
 {% block script %} 
