--- a/network/templates/network/allpost.html
+++ b/network/templates/network/allpost.html
@@ -1,17 +1,21 @@
 {% load static %}
 
-<nav aria-label="Page navigation">
-    <ul class="pagination justify-content-end">
-      <li class="page-item previous-btn ">
-        <a class="page-link" href="#" >Previous</a>
-      </li>
-      <li class="page-item next-btn">
-        <a class="page-link" href="#">Next</a>
-      </li>
-    </ul>
-  </nav>
-
 <div id="allposts"></div>
+
+<nav aria-label="Page navigation " class="fixed-bottom ">
+  <ul class="pagination pagination-lg justify-content-center">
+    <li class="page-item previous-btn ">
+      <a class="page-link" href="#" >Previous</a>
+    </li>
+    <li class="page-item disabled">
+      <a class="page-link" href="#">Page <span id="current_page"></span> of <span id="num_pages"></span>
+    </a></li>
+
+    <li class="page-item next-btn">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>
 
 {% block script %} 
     <script src="{% static 'network/new_post.js'%}"></script> 
