--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -5,10 +5,10 @@
 <div class="card" id="new_post">
     {% if user.is_authenticated %}
     <div class="card-body my-card">
-        Add New Post
+        <label>Create Post</label>
             <textarea class="mt-2 form-control" id="add-text" rows="3"></textarea>
             <div class="mt-2 d-flex justify-content-end">
-                <button type="button" id="add-btn" class="btn btn-success">Post</button>
+                <button type="button" id="add-btn" class="btn btn-warning">Post</button>
             </div>
     </div>
     {% endif %}
