--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -12,14 +12,14 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <a class="navbar-brand" href="#">Network</a>
           
             <div>
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/profile/{{user.username}}"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link username" href="/profile/{{user.username}}"><strong>{{ user.username }}</strong></a>
                     </li>
                 {% endif %}
                 <li class="nav-item">
