--- a/auctions/templates/auctions/bought.html
+++ b/auctions/templates/auctions/bought.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h1>Congratulations!</h1> 
-    <h3>You bough item: {{ auction.title }} for {{ auction.current_price }} $.</h3>
-    Please contect the seller <strong>{{ auction.seller.username }}</strong> and finalize your purchase.
+    <h3>You bought item: {{ auction.title }} for {{ auction.current_price }} $.</h3>
+    Please contact the seller <strong>{{ auction.seller.username }}</strong> for further process.
 
 {% endblock %}
