--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'auctions:user_panel' %}">User Panel</a>
+                            <a class="nav-link" href="{% url 'auctions:profile' %}">Profile</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'auctions:create_listing' %}">Create Listing</a>
