--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-    {% include "auctions/listing_layout.html" with auctions=auctions sub_title=category_full %}
+    {% include "auctions/listing_layout.html" with auctions=auctions sub_title=choice_in_category %}
 
 {% endblock %}
