--- a/auctions/templates/auctions/error_handling.html
+++ b/auctions/templates/auctions/error_handling.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="error-container">
-    <div class="error-code">{{ code }}</div>
+    <div class="error-code">{{ status_code }}</div>
     <div class="error-message">{{ message }}</div>
 </div>
 
