--- a/auctions/templates/auctions/listing_page.html
+++ b/auctions/templates/auctions/listing_page.html
@@ -2,23 +2,23 @@
 
 {% block body %}
 <div class="listing-page-main-btn">
-    <!-- --- Watchlist button --- -->
+
     {% if user.is_authenticated and user.id != auction.seller.id %}
     <form action="{% url 'auctions:watchlist' %}" method="POST">
         {% csrf_token %}
-        {% if on_watchlist %}
+        {% if isOn_watchlist %}
             <input type="submit" class="btn btn-danger" value="Remove from watchlist">
-            <input type="hidden" name="on_watchlist" value="True">
+            <input type="hidden" name="isOn_watchlist" value="True">
         {% else %}
             <input type="submit" class="btn btn-success" value="Add to watchlist">
-            <input type="hidden" name="on_watchlist" value="False">
+            <input type="hidden" name="isOn_watchlist" value="False">
         {% endif %}
 
         <input type="hidden" name="next" value="{{ request.path }}">
         <input type="hidden" name="auction_id" value="{{ auction.id }}">
     </form>
     {% endif %}
-    <!-- --- Close auction button --- -->
+
     {% if user.id == auction.seller.id %}
         <form action="{% url 'auctions:close_auction' auction_id=auction.id %}" method="POST">
             {% csrf_token %}
@@ -31,7 +31,6 @@
     <h2>{{auction.title}}</h2>
 </div>
 
-<!-- --- Auction Description --- -->
 <div class="card mb-3">
     {% if auction.image_url %}
         <div class="listing-page-img-wrapper m-4">
@@ -46,20 +45,18 @@
     </div>
 
     <ul class="list-group list-group-flush">
-        <div class="list-group-item">Current Price <strong>{{auction.current_price}} $ </strong></div>
+        <div class="list-group-item">Current Price <strong>$ {{auction.current_price}}</strong></div>
 
-        <!-- --- Bid info and form --- -->
         <div class="list-group-item text-muted">
             {% if bid_amount != 0 %}
-                <small>{{ bid_amount }} bid(s) so far. {{ bid_message }}</small>
+                <small>Total {{ bid_amount }} bid(s).<br> {{ bid_message }}</br></small>
             {% else %}
-                <small>No bids so far.</small>
+                <small>No bids.</small>
             {% endif %}
         </div>
         {% if user.is_authenticated and user.id != auction.seller.id %}
             <form action="{% url 'auctions:bid' %}" method="POST" class="list-group-item">
                 {% csrf_token %}
-                <!-- <input type="number" name="bid" placeholder="Bid" step="0.01"> -->
                 <div class="form-group row">
                     <div class="col-sm-10 col-8">
                         {{ bid_form }}
@@ -106,7 +103,7 @@
                     </div>
                 {% endfor %}
             </div>
-            <form action="{% url 'auctions:handle_comment' auction_id=auction.id %}" method="POST">
+            <form action="{% url 'auctions:comment' auction_id=auction.id %}" method="POST">
                 {% csrf_token %}
                 <div class="mb-2">
                     {{ comment_form }}
