--- a/auctions/templates/auctions/sold.html
+++ b/auctions/templates/auctions/sold.html
@@ -3,5 +3,5 @@
 {% block body %}
 <h1>Congratulations!</h1>
 <h3>You sold item: {{ auction.title }} for {{ auction.current_price }} $.</h3>
-Contact user <strong>{{ winner.username }}</strong> to proceed.
+Contact buyer <strong>{{ winner.username }}</strong> to proceed.
 {% endblock %}
