--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,6 +2,6 @@
 
 {% block body %}
     
-    {% include "auctions/listing_layout.html" with auctions=auctions sub_title="Active Listings"%}
+    {% include "auctions/listing_layout.html" with auctions=auctions subject="Active Listings"%}
 
 {% endblock %}
