--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-{% include "auctions/listing_layout.html" with auctions=watchlist_items sub_title="Watchlist" %}
+{% include "auctions/listing_layout.html" with auctions=watchlist_items subject="Watchlist" %}
 
 {% endblock %}
