--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -51,7 +51,7 @@ body {
     padding: 20px 0 0 0;
 }
 
-.sub-title {
+.subject {
     text-align: center;
     padding: 20px 0;
     font-size: 2rem;
