--- a/auctions/templates/auctions/closed_without_sold.html
+++ b/auctions/templates/auctions/closed_without_sold.html
@@ -1,5 +1,5 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-<h3>You close auction {{ auction.title }} without sold</h3>
+<h3>You closed auction {{ auction.title }} without sold</h3>
 {% endblock %}
