--- a/auctions/templates/auctions/create_listing.html
+++ b/auctions/templates/auctions/create_listing.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="container">
-    <div class="sub-title">Create Listing</div>
+    <div class="subject">Create Listing</div>
 
     <form action="{% url 'auctions:create_listing' %}", method="POST">
         {% csrf_token %}
