--- a/auctions/templates/auctions/sold.html
+++ b/auctions/templates/auctions/sold.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 <h1>Congratulations!</h1>
-<h3>You sold item: {{ auction.title }} for {{ auction.current_price }} $.</h3>
+<h3>You sold item: {{ auction.title }} for $ {{ auction.current_price }}.</h3>
 Contact buyer <strong>{{ winner.username }}</strong> to proceed.
 {% endblock %}
