--- a/expense_tracker/templates/expense.html
+++ b/expense_tracker/templates/expense.html
@@ -1,30 +1,22 @@
 {% extends "layout.html" %}
+{% load static %}
 {% block body %}
-
-  {% if user.is_authenticated %}
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Expense Tracker</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Profile</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Budgets</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-          </li>
-        </ul>
-      </div>
-      <a class="navbar-brand" href="#"><i class="bi bi-plus-lg"></i></a>
-    </div>
-  </nav>
   <div>
-    
-  {% endif %}
+    <h2>expense graph</h2>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      <p class="mb-0 expense_date">{{date}}Fri, 16 September 2022</p>
+    </div>
+    <div class="card-body">
+      <div class="row mt-2">
+        <div class="col-sm-6 expense_category">
+            <label>{{category}}Category <span class="expense_notes">{{notes}}notes to be here</span></label>
+        </div>
+        <div class="col-sm-4">
+          <p class="mb-0 expense_amount">{{amount}}$25</p>
+        </div>
+        </div>
+    </div>
+  </div>
 {% endblock %}
