--- a/expense_tracker/templates/layout.html
+++ b/expense_tracker/templates/layout.html
@@ -8,7 +8,7 @@
         <title>{% block title %}Expense Tracker{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static 'expense_tracker/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'styles.css' %}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> 
@@ -16,10 +16,35 @@
         
     </head>
     <body>
-        <div class="container">
-            {% block body %}
-            {% endblock %}
-        </div>
+        {% if user.is_authenticated %}
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Expense Tracker</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'index' %}">Expenses</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="{% url 'profile' %}">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Budgets</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                </li>
+              </ul>
+            </div>
+            <a class="navbar-brand" href="#"><i class="bi bi-plus-lg"></i></a>
+          </div>
+        </nav>
+        {% endif %}
+        {% block body %}
+        {% endblock %}
         {% block script %}
         {% endblock %}
     </body>
