--- a/expense_tracker/templates/layout.html
+++ b/expense_tracker/templates/layout.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         {% if user.is_authenticated %}
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Expense Tracker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,14 +32,13 @@
                   <a class="nav-link active" href="{% url 'profile' %}">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#">Budgets</a>
+                  <a class="nav-link active" href="{% url 'budget' %}">Budgets</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                 </li>
               </ul>
             </div>
-            <a class="navbar-brand" href="#"><i class="bi bi-plus-lg"></i></a>
           </div>
         </nav>
         {% endif %}
