--- a/expense_tracker/templates/expense.html
+++ b/expense_tracker/templates/expense.html
@@ -10,7 +10,7 @@
               </div>
               {% comment %} TODO: Create months and years dropdown  {% endcomment %}
               <div class="w-50 d-flex justify-content-end">
-                <a class="" style="font-size: larger;" href="#"><i class="bi bi-plus-lg"></i></a>
+                <a class="fw-bolder fs-3" href="{% url 'add_expense' %}"><i class="bi bi-plus-lg"></i></a>
               </div>
           </div>
       </div>
