--- a/expense_tracker/templates/profile.html
+++ b/expense_tracker/templates/profile.html
@@ -4,7 +4,7 @@
     <div class="card">
         <div class="card-header" >
             <div class="d-flex ">
-                <div class="w-50 d-flex justify-content-start">
+                <div class="w-50 mt-2 d-flex justify-content-start">
                     <strong>My Profile</strong>
                 </div>
                 <div class="w-50 d-flex justify-content-end">
@@ -28,24 +28,6 @@
             </div>
             <div class="col-sm-9">
                 <p class="text-muted mb-0">{{email}}email</p>
-            </div>
-            </div>
-            <hr>
-            <div class="row">
-            <div class="col-sm-3">
-                <p class="mb-0">DOB</p>
-            </div>
-            <div class="col-sm-3">
-                <p class="text-muted mb-0">{{DOB}}dob</p>
-            </div>
-            </div>
-            <hr>
-            <div class="row">
-            <div class="col-sm-3">
-                <p class="mb-0">Change Currency</p>
-            </div>
-            <div class="col-sm-3">
-                <p class="text-muted mb-0">{{currency}}currency</p>
             </div>
             </div>
         </div>
