--- a/expense_tracker/templates/budget.html
+++ b/expense_tracker/templates/budget.html
@@ -16,7 +16,7 @@
         <div class="card-body text-center">
         <h5 class="card-title">Monthly {{currency}} {{budget_amount}}</h5>
         <p class="mb-0 expense-date">{{start_date}} - {{end_date}}</p>
-        <h1 class="text-success">{{currency}} {{left_amount}}66</h1>
+        <p><h3 style="color: #01b652;">{{currency}} {{left_amount}}</h3></p>
         <p class="card-text text-success">left to spend</p>
       {% comment %} TODO: category wise budgeting {% endcomment %}
 </div>
