--- a/expense_tracker/templates/profile.html
+++ b/expense_tracker/templates/profile.html
@@ -32,15 +32,16 @@
   </section>
 
   <section style="background-color: #eee;">
-    <form action="{% url 'change_password' %}" method="post">
     <div class="card">
         <div class="card-header" >
             <div class="d-flex ">
                 <div class="w-50 d-flex justify-content-start">
                     <strong>Change Password</strong>
                 </div>
+                <div id="error-message" role="alert" style="display:none">
+                </div>
                 <div class="w-50 d-flex justify-content-end">
-                    <button type="submit" class="btn btn-success">Save</button>
+                    <button type="submit" class="btn btn-success" onclick="changePassword()">Save</button>
                 </div>
             </div>
         </div>
@@ -50,7 +51,7 @@
                 <p class="mb-0">Old Password</p>
             </div>
             <div class="col-sm-9">
-                <input type="password" class="form-control" id="inputPassword">
+                <input type="password" class="form-control" id="old-Password">
             </div>
             </div>
             <div class="row mt-3">
@@ -58,7 +59,7 @@
                 <p class="mb-0">New Password</p>
             </div>
             <div class="col-sm-9">
-                <input type="password" class="form-control" id="inputPassword">
+                <input type="password" class="form-control" id="new-Password">
             </div>
             </div>
             <div class="row mt-3">
@@ -66,12 +67,11 @@
                 <p class="mb-0">Confirm Password</p>
             </div>
             <div class="col-sm-9">
-                <input type="password" class="form-control" id="inputPassword">
+                <input type="password" class="form-control" id="confirm-Password">
             </div>
             </div>
         </div>
     </div>
-</form>
   </section>
     
 
