--- a/expense_tracker/templates/budget.html
+++ b/expense_tracker/templates/budget.html
@@ -20,6 +20,12 @@
         <p class="card-text text-success">left to spend</p>
       {% comment %} TODO: category wise budgeting {% endcomment %}
 </div>
+<div row="justify-content-md-center">
+    <div class="col-md-6 offset-md-3">
+        <canvas id="myChart"></canvas>
+    </div>
+</div>
+
 
 
 
@@ -33,5 +39,10 @@
         <p class="card-text">No budget created so far.</p>
         </div>
     </div>
-{% endif %}
+   
+{% endif %} 
+    {% block script %} 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'budget.js'%}"></script> 
+    {% endblock %}
 {% endblock%}
